# perspectives

./: Cargo.toml  README.md  build.sh  index.html
.github/workflows/: github-actions.yml
pkg/: package.json  perspectives.d.ts  perspectives.js  perspectives_bg.wasm  perspectives_bg.wasm.d.ts
src/: draw.rs  frontend.rs  fs_io.rs  lib.rs  main.rs
www/: index.html  style.css
