[package]
name = "perspectives"
version = "0.2.3"
authors = ["Simon Gasse <sgasse@users.noreply.github.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "perspectives"
required-features = ["build-binary"]

[features]
default = ["console_error_panic_hook"]
build-binary = ["warp", "tokio", "structopt"]

[dependencies]
image = "^0.23.14"
imageproc = "^0.22.0"
rusttype = "^0.9.2"
wasm-bindgen = "^0.2.78"
console_error_panic_hook = { version = "^0.1.7", optional = true }
js-sys = "^0.3.55"

warp = { version = "^0.3.1", optional = true }
tokio = { version = "1.13.0", features = ["full"], optional = true }
structopt = { version = "^0.3", optional = true }

[dependencies.web-sys]
version = "^0.3.55"
features = [
  'CanvasRenderingContext2d',
  'console',
  'Document',
  'Element',
  'HtmlCanvasElement',
  'HtmlInputElement',
  'HtmlElement',
  'ImageData',
  'MessageEvent',
  'MouseEvent',
  'Node',
  'Window',
] 

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"