[package]
name = "perspectives"
version = "0.2.6"
authors = ["Simon B. Gasse <sgasse@users.noreply.github.com>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
image = "^0.24.7"
imageproc = "^0.23.0"
rusttype = "^0.9.3"
wasm-bindgen = "^0.2.87"
console_error_panic_hook = { version = "^0.1.7", optional = true }
js-sys = "^0.3.64"

[dependencies.web-sys]
version = "^0.3.64"
features = [
  'CanvasRenderingContext2d',
  'console',
  'Document',
  'Element',
  'HtmlCanvasElement',
  'HtmlInputElement',
  'HtmlElement',
  'ImageData',
  'MessageEvent',
  'MouseEvent',
  'Node',
  'Window',
]

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
