[package]
name = "perspectives"
version = "0.2.9"
authors = ["Simon B. Gasse <sgasse@users.noreply.github.com>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
ab_glyph = "0.2.28"
console_error_panic_hook = { version = "^0.1.7", optional = true }
image = "^0.25.1"
imageproc = "^0.25.0"
js-sys = "^0.3.69"
log = "0.4.22"
wasm-bindgen = "^0.2.92"
wasm-logger = "0.2.0"
web-sys = { version = "^0.3.69", features = [
  'CanvasRenderingContext2d',
  'console',
  'Document',
  'Element',
  'HtmlCanvasElement',
  'HtmlElement',
  'HtmlInputElement',
  'ImageData',
  'Location',
  'MessageEvent',
  'MouseEvent',
  'Node',
  'Window',
] }

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
